zhaoge/force-app/main/default/objects/PreviewResult__c/PreviewResult__c.object-meta.xml
<CustomObject>
    <label>プレビュー結果</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>プレビュー結果No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>