zhaoge/force-app/main/default/objects/PreviewResult__c/fields/Bikou__c.field-meta.xml
<CustomField>
    <fullName>Bikou__c</fullName>
    <label>備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>