zhaoge/force-app/main/default/objects/PreviewResult__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <label>評価</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation</valueSetName>
    </valueSet>
</CustomField>