zhaoge/force-app/main/default/objects/PreviewResult__c/fields/PreviewDocument__c.field-meta.xml
<CustomField>
    <fullName>PreviewDocument__c</fullName>
    <label>プレビュー資料</label>
    <referenceTo>PreviewDocument__c</referenceTo>
    <relationshipLabel>プレビュー結果</relationshipLabel>
    <relationshipName>PreviewDocument</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>